--- a/app/src/main/res/drawable/thumb_scrollbar.xml
+++ b/app/src/main/res/drawable/thumb_scrollbar.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:state_pressed="true">
 		<shape>
-			<solid android:color="@color/colorYellow500" />
+			<solid android:color="?attr/colorPrimaryVariant" />
 			<size android:width="5dp" />
 			<corners android:bottomLeftRadius="3dp"
 				android:topLeftRadius="3dp" />
@@ -11,7 +11,7 @@
 
 	<item>
 		<shape>
-			<solid android:color="?attr/colorSecondary" />
+			<solid android:color="?attr/colorPrimary" />
 			<size android:width="5dp" />
 			<corners android:bottomLeftRadius="3dp"
 				android:topLeftRadius="3dp" />
