--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,31 +8,13 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<com.google.android.material.appbar.AppBarLayout
-		android:id="@+id/home_app_bar"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<com.google.android.material.appbar.MaterialToolbar
-			android:id="@+id/main_toolbar"
-			android:layout_width="match_parent"
-			android:layout_height="?attr/actionBarSize"
-			app:layout_scrollFlags="scroll|snap|enterAlways" />
-
-		<com.google.android.material.tabs.TabLayout
-			android:id="@+id/main_tab_layout"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			app:tabGravity="fill"
-			app:tabMode="fixed" />
-	</com.google.android.material.appbar.AppBarLayout>
-
-	<!--viewpager1 is causing a crash with navigation component-->
-	<androidx.viewpager2.widget.ViewPager2
-		android:id="@+id/main_view_pager"
+	<fragment
+		android:id="@+id/home_nav_host_fragment"
+		android:name="androidx.navigation.fragment.NavHostFragment"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+		app:defaultNavHost="true"
+		app:navGraph="@navigation/navigation_home" />
 
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/main_fab"
