--- a/app/src/main/res/layout/row_artist.xml
+++ b/app/src/main/res/layout/row_artist.xml
@@ -5,17 +5,18 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:layout_marginHorizontal="@dimen/margin_m"
-	android:layout_marginVertical="@dimen/margin_s">
+	android:layout_marginVertical="@dimen/margin_m"
+	android:background="@drawable/bg_item">
 
-	<androidx.cardview.widget.CardView
+	<com.google.android.material.card.MaterialCardView
 		android:id="@+id/row_artist_drawable_container"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
-		app:cardCornerRadius="@dimen/radius_l"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintDimensionRatio="1:1"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent">
+		app:layout_constraintTop_toTopOf="parent"
+		style="@style/Widget.App.CardView.Outlined">
 
 		<ImageView
 			android:id="@+id/row_artist_drawable"
@@ -23,7 +24,7 @@
 			android:layout_height="match_parent"
 			android:scaleType="centerInside"
 			android:src="@drawable/ic_music_artist" />
-	</androidx.cardview.widget.CardView>
+	</com.google.android.material.card.MaterialCardView>
 
 	<TextView
 		android:id="@+id/row_artist_title"
