--- a/app/src/main/res/layout/row_song_item_first.xml
+++ b/app/src/main/res/layout/row_song_item_first.xml
@@ -8,6 +8,6 @@
 	android:layout_height="wrap_content"
 	android:paddingTop="10dp"
 	android:paddingStart="@dimen/padding_container"
-	android:textColor="?attr/colorSecondary"
+	android:textColor="?attr/colorPrimary"
 	app:layout_constraintTop_toTopOf="parent" />
 <!--todo extract padding as dimension res-->
