--- a/app/src/main/res/layout/fragment_query.xml
+++ b/app/src/main/res/layout/fragment_query.xml
@@ -5,6 +5,7 @@
 	android:layout_height="match_parent">
 
 	<TextView
+		android:id="@+id/query_text_view"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:gravity="center"
