--- a/app/src/main/res/navigation/navigation_home.xml
+++ b/app/src/main/res/navigation/navigation_home.xml
@@ -4,20 +4,39 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/navigation_home"
-	app:startDestination="@id/homeContentFragment">
+	app:startDestination="@id/exploreFragment">
 
 	<fragment
-		android:id="@+id/homeContentFragment"
+		android:id="@+id/exploreFragment"
 		android:name="com.muiz6.musicplayer.ui.main.home.explore.ExploreFragment"
 		android:label="@string/app_name"
 		tools:layout="@layout/fragment_explore">
+
 		<action
-			android:id="@+id/action_homeContentFragment_to_searchFragment"
+			android:id="@+id/action_exploreFragment_to_searchFragment"
 			app:destination="@id/searchFragment" />
+
+		<action
+			android:id="@+id/action_exploreFragment_to_browseFragment"
+			app:destination="@id/browseFragment" />
 	</fragment>
 
 	<fragment
 		android:id="@+id/searchFragment"
 		android:name="com.muiz6.musicplayer.ui.main.home.search.SearchFragment"
 		tools:layout="@layout/fragment_search" />
+
+	<fragment
+		android:id="@+id/browseFragment"
+		android:name="com.muiz6.musicplayer.ui.main.home.browse.BrowseFragment"
+		tools:layout="@layout/fragment_browse">
+
+		<argument
+			android:name="queryTypeId"
+			app:argType="string" />
+
+		<argument
+			android:name="query"
+			app:argType="string" />
+	</fragment>
 </navigation>
