removed search for now. album, artist and genre browsing is now working

--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -17,11 +17,28 @@
 			android:layout_height="?attr/actionBarSize" />
 	</com.google.android.material.appbar.AppBarLayout>
 
-	<androidx.fragment.app.FragmentContainerView
-		android:id="@+id/browse_frag_view"
-		android:name="com.muiz6.musicplayer.ui.main.home.query.QueryFragment"
+	<ScrollView
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
 		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/browse_app_bar" />
+		app:layout_constraintTop_toBottomOf="@id/browse_app_bar">
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
+
+			<include
+				android:id="@+id/browse_recycler_view_album"
+				layout="@layout/fragment_list"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" />
+
+			<include
+				android:id="@+id/browse_recycler_view_song"
+				layout="@layout/fragment_list"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" />
+		</LinearLayout>
+	</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
