--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,25 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="757.57574"
-    android:viewportHeight="757.57574">
-  <group android:translateX="128.78787"
-      android:translateY="128.78787">
+    android:viewportWidth="108"
+    android:viewportHeight="108"
+    android:tint="#FFFFFF">
+  <group android:scaleX="2.61"
+      android:scaleY="2.61"
+      android:translateX="22.68"
+      android:translateY="22.68">
       <path
-          android:fillColor="#1ddcc3"
-          android:name="Ellipse 1"
-          android:pathData="m226.5 24c125.1 0 226.5 101.4 226.5 226.5c0 125.1 -101.4 226.5 -226.5 226.5c-125.1 0 -226.5 -101.4 -226.5 -226.5c0 -125.1 101.4 -226.5 226.5 -226.5z" />
-      <path
-          android:fillColor="#222"
-          android:name="Ellipse 1"
-          android:pathData="m226.5 119c72.6 0 131.5 58.9 131.5 131.5c0 72.6 -58.9 131.5 -131.5 131.5c-72.6 0 -131.5 -58.9 -131.5 -131.5c0 -72.6 58.9 -131.5 131.5 -131.5z" />
-      <path
-          android:fillColor="#fff"
-          android:name="centre"
-          android:pathData="m227 232c9.9 0 18 8.1 18 18c0 9.9 -8.1 18 -18 18c-9.9 0 -18 -8.1 -18 -18c0 -9.9 8.1 -18 18 -18z" />
-      <path
-          android:fillColor="#fff"
-          android:name="Shape 1"
-          android:pathData="m291 191 112 128 97 -130 -209 2z" />
+          android:pathData="M17.6,11.48 L19.44,8.3a0.63,0.63 0,0 0,-1.09 -0.63l-1.88,3.24a11.43,11.43 0,0 0,-8.94 0L5.65,7.67a0.63,0.63 0,0 0,-1.09 0.63L6.4,11.48A10.81,10.81 0,0 0,1 20L23,20A10.81,10.81 0,0 0,17.6 11.48ZM7,17.25A1.25,1.25 0,1 1,8.25 16,1.25 1.25,0 0,1 7,17.25ZM17,17.25A1.25,1.25 0,1 1,18.25 16,1.25 1.25,0 0,1 17,17.25Z"
+          android:fillColor="@android:color/white"/>
   </group>
 </vector>
