--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,11 +21,9 @@
 
 	<dimen name="stroke_m">1.5dp</dimen>
 
-	<dimen name="padding_now_playing_text">10dp</dimen>
-	<dimen name="padding_container">16dp</dimen>
-    <dimen name="padding_seek_bar_now_playing">25dp</dimen>
-    <dimen name="padding_container_controls_now_playing">20dp</dimen>
-	<dimen name="padding_main_bottom_bar_title">10dp</dimen>
+	<dimen name="padding_xl">25dp</dimen>
+	<dimen name="padding_l">16dp</dimen>
+	<dimen name="padding_m">10dp</dimen>
 
 	<!--todo: remove when not needed-->
 	<dimen name="padding_bottom_home_view_pager">56dp</dimen>
