--- a/app/src/main/res/drawable/bg_bottom_bar.xml
+++ b/app/src/main/res/drawable/bg_bottom_bar.xml
@@ -1,25 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list>
-	<item>
-		<shape
-			xmlns:android="http://schemas.android.com/apk/res/android">
+<shape
+	xmlns:android="http://schemas.android.com/apk/res/android">
 
-			<solid android:color="?attr/colorSurface" />
-			<corners
-				android:topLeftRadius="@dimen/radius_l"
-				android:topRightRadius="@dimen/radius_l" />
-		</shape>
-	</item>
+	<solid android:color="?android:attr/colorBackground" />
 
-	<!--elevation overlay 7%-->
-	<item>
-		<shape
-			xmlns:android="http://schemas.android.com/apk/res/android">
-
-			<solid android:color="#12FFFFFF" />
-			<corners
-				android:topLeftRadius="@dimen/radius_l"
-				android:topRightRadius="@dimen/radius_l" />
-		</shape>
-	</item>
-</layer-list>
+	<corners
+		android:bottomLeftRadius="@dimen/radius_l"
+		android:bottomRightRadius="@dimen/radius_l" />
+</shape>
