--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,57 +13,19 @@
 		android:name="androidx.navigation.fragment.NavHostFragment"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		app:layout_anchor="@id/home_bottom_sheet"
 		app:defaultNavHost="true"
 		app:navGraph="@navigation/navigation_home" />
 
-	<com.google.android.material.floatingactionbutton.FloatingActionButton
-		android:id="@+id/main_fab"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom|end"
-		android:layout_margin="@dimen/margin_l"
-		android:src="@drawable/ic_shuffle"
-		app:layout_dodgeInsetEdges="bottom" />
-
-	<LinearLayout
-		android:id="@+id/main_bottom_bar"
-		android:layout_width="match_parent"
-		android:layout_height="?attr/actionBarSize"
-		android:layout_gravity="bottom"
-		android:background="@drawable/bg_bottom_bar"
+	<!--needed to create fade effect when dragging bottom sheet-->
+	<View
 		android:visibility="gone"
-		app:layout_insetEdge="bottom">
+		android:id="@+id/home_bg"
+		android:background="#99000000"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"/>
 
-		<TextView
-			android:id="@+id/main_bottom_bar_song_title"
-			android:layout_width="0dp"
-			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:ellipsize="marquee"
-			android:fadingEdge="horizontal"
-			android:gravity="center"
-
-			android:marqueeRepeatLimit="marquee_forever"
-			android:paddingStart="@dimen/padding_main_bottom_bar_title"
-			android:scrollHorizontally="true"
-			android:singleLine="true" />
-
-		<ImageButton
-			android:id="@+id/main_bottom_bar_btn_previous"
-			android:layout_width="50dp"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_skip_previous" />
-
-		<ImageButton
-			android:id="@+id/main_bottom_bar_btn_play_pause"
-			android:layout_width="50dp"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_play_arrow" />
-
-		<ImageButton
-			android:id="@+id/main_bottom_bar_btn_next"
-			android:layout_width="50dp"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_skip_next" />
-	</LinearLayout>
+	<include
+		android:id="@+id/home_bottom_sheet"
+		layout="@layout/bottom_sheet_player" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
