--- a/app/src/main/res/layout/bottom_sheet_player.xml
+++ b/app/src/main/res/layout/bottom_sheet_player.xml
@@ -15,13 +15,16 @@
 	<ImageView
 		android:id="@+id/bottom_sheet_album_art"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:scaleType="centerCrop" />
+		android:layout_height="0dp"
+		android:scaleType="centerCrop"
+		app:layout_constraintBottom_toTopOf="@id/bottom_sheet_container_controls"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<LinearLayout
 		android:id="@+id/bottom_sheet_collapsed_view"
 		android:layout_width="match_parent"
 		android:layout_height="?attr/behavior_peekHeight"
+		android:background="@drawable/color_surface_8dp_elevation"
 		app:layout_constraintTop_toTopOf="parent">
 
 		<ImageButton
@@ -45,22 +48,10 @@
 			android:singleLine="true" />
 
 		<ImageButton
-			android:id="@+id/bottom_sheet_collapsed_view_btn_previous"
-			android:layout_width="50dp"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_skip_previous" />
-
-		<ImageButton
 			android:id="@+id/bottom_sheet_collapsed_view_btn_play_pause"
 			android:layout_width="50dp"
 			android:layout_height="match_parent"
 			android:src="@drawable/ic_play_arrow" />
-
-		<ImageButton
-			android:id="@+id/bottom_sheet_collapsed_view_btn_next"
-			android:layout_width="50dp"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_skip_next" />
 	</LinearLayout>
 
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -73,82 +64,88 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
-	<TextView
-		android:id="@+id/bottom_sheet_title"
+	<!--<TextView-->
+	<!--	android:id="@+id/bottom_sheet_title"-->
+	<!--	android:layout_width="match_parent"-->
+	<!--	android:layout_height="wrap_content"-->
+	<!--	android:padding="@dimen/padding_m"-->
+	<!--	app:layout_constraintBottom_toTopOf="@id/bottom_sheet_artist" />-->
+
+	<!--<TextView-->
+	<!--	android:id="@+id/bottom_sheet_artist"-->
+	<!--	android:layout_width="match_parent"-->
+	<!--	android:layout_height="wrap_content"-->
+	<!--	android:paddingHorizontal="@dimen/padding_m"-->
+	<!--	app:layout_constraintBottom_toTopOf="@id/bottom_sheet_album" />-->
+
+	<!--<TextView-->
+	<!--	android:id="@+id/bottom_sheet_album"-->
+	<!--	android:layout_width="match_parent"-->
+	<!--	android:layout_height="wrap_content"-->
+	<!--	android:paddingHorizontal="@dimen/padding_m"-->
+	<!--	android:paddingTop="@dimen/padding_m"-->
+	<!--	app:layout_constraintBottom_toTopOf="@id/bottom_sheet_seek_bar" />-->
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:id="@+id/bottom_sheet_container_controls"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:padding="@dimen/padding_m"
-		app:layout_constraintBottom_toTopOf="@id/bottom_sheet_artist" />
+		android:background="?attr/colorSurface"
+		app:layout_constraintBottom_toBottomOf="parent">
 
-	<TextView
-		android:id="@+id/bottom_sheet_artist"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:paddingHorizontal="@dimen/padding_m"
-		app:layout_constraintBottom_toTopOf="@id/bottom_sheet_album" />
+		<SeekBar
+			android:id="@+id/bottom_sheet_seek_bar"
+			style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			app:layout_constraintBottom_toTopOf="@id/bottom_sheet_btn_play_pause" />
 
-	<TextView
-		android:id="@+id/bottom_sheet_album"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:paddingHorizontal="@dimen/padding_m"
-		android:paddingTop="@dimen/padding_m"
-		app:layout_constraintBottom_toTopOf="@id/bottom_sheet_seek_bar" />
+		<ImageButton
+			android:id="@+id/bottom_sheet_btn_shuffle"
+			android:layout_width="@dimen/size_icon_now_playing"
+			android:layout_height="@dimen/size_icon_now_playing"
+			android:scaleType="fitXY"
+			android:src="@drawable/ic_shuffle"
+			app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_btn_play_pause"
+			app:layout_constraintStart_toStartOf="parent" />
 
-	<SeekBar
-		android:id="@+id/bottom_sheet_seek_bar"
-		style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:paddingVertical="@dimen/padding_xl"
-		app:layout_constraintBottom_toTopOf="@id/bottom_sheet_btn_play_pause" />
+		<ImageButton
+			android:id="@+id/bottom_sheet_btn_previous"
+			android:layout_width="@dimen/size_icon_now_playing"
+			android:layout_height="@dimen/size_icon_now_playing"
+			android:scaleType="fitXY"
+			android:src="@drawable/ic_skip_previous"
+			app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_btn_play_pause"
+			app:layout_constraintEnd_toStartOf="@id/bottom_sheet_btn_play_pause"
+			app:layout_constraintStart_toEndOf="@id/bottom_sheet_btn_shuffle" />
 
-	<ImageButton
-		android:id="@+id/bottom_sheet_btn_shuffle"
-		android:layout_width="@dimen/size_icon_now_playing"
-		android:layout_height="@dimen/size_icon_now_playing"
-		android:scaleType="fitXY"
-		android:src="@drawable/ic_shuffle"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent" />
+		<ImageButton
+			android:id="@+id/bottom_sheet_btn_play_pause"
+			android:layout_width="@dimen/size_icon_now_playing"
+			android:layout_height="@dimen/size_icon_now_playing"
+			android:scaleType="fitXY"
+			android:src="@drawable/ic_play_arrow"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toStartOf="@id/bottom_sheet_btn_repeat"
+			app:layout_constraintStart_toEndOf="@id/bottom_sheet_btn_shuffle" />
 
-	<ImageButton
-		android:id="@+id/bottom_sheet_btn_previous"
-		android:layout_width="@dimen/size_icon_now_playing"
-		android:layout_height="@dimen/size_icon_now_playing"
-		android:scaleType="fitXY"
-		android:src="@drawable/ic_skip_previous"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toStartOf="@id/bottom_sheet_btn_play_pause"
-		app:layout_constraintStart_toEndOf="@id/bottom_sheet_btn_shuffle" />
+		<ImageButton
+			android:id="@+id/bottom_sheet_btn_next"
+			android:layout_width="@dimen/size_icon_now_playing"
+			android:layout_height="@dimen/size_icon_now_playing"
+			android:scaleType="fitXY"
+			android:src="@drawable/ic_skip_next"
+			app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_btn_play_pause"
+			app:layout_constraintEnd_toStartOf="@id/bottom_sheet_btn_repeat"
+			app:layout_constraintStart_toEndOf="@id/bottom_sheet_btn_play_pause" />
 
-	<ImageButton
-		android:id="@+id/bottom_sheet_btn_play_pause"
-		android:layout_width="@dimen/size_icon_now_playing"
-		android:layout_height="@dimen/size_icon_now_playing"
-		android:scaleType="fitXY"
-		android:src="@drawable/ic_play_arrow"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.5"
-		app:layout_constraintStart_toStartOf="parent" />
-
-	<ImageButton
-		android:id="@+id/bottom_sheet_btn_next"
-		android:layout_width="@dimen/size_icon_now_playing"
-		android:layout_height="@dimen/size_icon_now_playing"
-		android:scaleType="fitXY"
-		android:src="@drawable/ic_skip_next"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toStartOf="@id/bottom_sheet_btn_repeat"
-		app:layout_constraintStart_toEndOf="@id/bottom_sheet_btn_play_pause" />
-
-	<ImageButton
-		android:id="@+id/bottom_sheet_btn_repeat"
-		android:layout_width="@dimen/size_icon_now_playing"
-		android:layout_height="@dimen/size_icon_now_playing"
-		android:scaleType="fitXY"
-		android:src="@drawable/ic_repeat"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintRight_toRightOf="parent" />
+		<ImageButton
+			android:id="@+id/bottom_sheet_btn_repeat"
+			android:layout_width="@dimen/size_icon_now_playing"
+			android:layout_height="@dimen/size_icon_now_playing"
+			android:scaleType="fitXY"
+			android:src="@drawable/ic_repeat"
+			app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_btn_play_pause"
+			app:layout_constraintEnd_toEndOf="parent" />
+	</androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
