--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,22 +8,23 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<fragment
+	<androidx.fragment.app.FragmentContainerView
 		android:id="@+id/home_nav_host_fragment"
 		android:name="androidx.navigation.fragment.NavHostFragment"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:layout_anchor="@id/home_bottom_sheet"
+		android:paddingBottom="?attr/actionBarSize"
 		app:defaultNavHost="true"
+		app:layout_anchor="@id/home_bottom_sheet"
 		app:navGraph="@navigation/navigation_home" />
 
 	<!--needed to create fade effect when dragging bottom sheet-->
 	<View
-		android:visibility="gone"
 		android:id="@+id/home_bg"
-		android:background="#99000000"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"/>
+		android:layout_height="match_parent"
+		android:background="#99000000"
+		android:visibility="gone" />
 
 	<include
 		android:id="@+id/home_bottom_sheet"
