--- a/app/src/main/res/layout/fragment_queue.xml
+++ b/app/src/main/res/layout/fragment_queue.xml
@@ -17,11 +17,11 @@
 			android:layout_height="?attr/actionBarSize" />
 	</com.google.android.material.appbar.AppBarLayout>
 
-	<TextView
+	<include
+		android:id="@+id/queue_fragment_list"
+		layout="@layout/fragment_list"
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
-		app:layout_constraintTop_toBottomOf="@id/queue_app_bar"
 		app:layout_constraintBottom_toBottomOf="parent"
-		android:gravity="center"
-		android:text="Queue Fragment" />
+		app:layout_constraintTop_toBottomOf="@id/queue_app_bar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
