added runtime storage permission request feature

--- a/app/src/main/res/drawable/bg_item.xml
+++ b/app/src/main/res/drawable/bg_item.xml
@@ -4,7 +4,7 @@
 	<item android:state_activated="true">
 		<shape>
 			<corners android:radius="@dimen/radius_m" />
-			<solid android:color="?attr/colorSecondary" />
+			<solid android:color="@color/colorBlueGrey800" />
 		</shape>
 	</item>
 
