--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
 	<color name="colorGrey850">#1F1F1F</color>
 	<color name="colorGrey900">#0F0F0E</color>
 
-	<color name="colorBlueGrey800">#37474F</color>
+	<color name="colorBlueGrey800">#404a50</color>
 	<color name="colorBlueGrey900">#263238</color>
 
 	<color name="colorYellow500">#fCE300</color>
