--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -3,21 +3,22 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:id="@+id/library_root"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<com.google.android.material.appbar.AppBarLayout
-		android:id="@+id/home_app_bar"
+		android:id="@+id/library_app_bar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 
 		<com.google.android.material.appbar.MaterialToolbar
-			android:id="@+id/main_toolbar"
+			android:id="@+id/library_toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			app:layout_scrollFlags="scroll|snap|enterAlways" />
 
 		<com.google.android.material.tabs.TabLayout
-			android:id="@+id/main_tab_layout"
+			android:id="@+id/library_tab_layout"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			app:tabGravity="fill"
@@ -26,7 +27,7 @@
 
 	<!--viewpager1 is causing a crash with navigation component-->
 	<androidx.viewpager2.widget.ViewPager2
-		android:id="@+id/main_view_pager"
+		android:id="@+id/library_view_pager"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
